--- a/src/Components/Cart/Checkout.module.css
+++ b/src/Components/Cart/Checkout.module.css
@@ -1,6 +1,6 @@
 .form {
   margin: 1rem 0;
-  height: 17rem;
+  height: 14rem;
   overflow: auto;
 }
 
@@ -35,6 +35,8 @@
 }
 
 .user-input {
+  height: 100%;
+  overflow: auto;
   flex-direction: column;
   align-items: flex-start;
   gap: 0.5rem;
